--- a/demo-app-micronaut/settings.gradle
+++ b/demo-app-micronaut/settings.gradle
@@ -1,8 +1,9 @@
-includeBuild("..") {
-    dependencySubstitution {
-        substitute module('ch.silviowangler.rest:gradle-java-rest-api') with project(':gradle-java-rest-api')
-        substitute module('ch.silviowangler.rest:rest-api-micronaut') with project(':rest-api-micronaut')
-        substitute module('ch.silviowangler.rest:json-model') with project(':json-model')
-        substitute module('ch.silviowangler.rest:rest-model') with project(':rest-model')
-    }
-}
+// // Uncomment to use the local plugin build
+//includeBuild("..") {
+//    dependencySubstitution {
+//        substitute module('ch.silviowangler.rest:gradle-java-rest-api') with project(':gradle-java-rest-api')
+//        substitute module('ch.silviowangler.rest:rest-api-micronaut') with project(':rest-api-micronaut')
+//        substitute module('ch.silviowangler.rest:json-model') with project(':json-model')
+//        substitute module('ch.silviowangler.rest:rest-model') with project(':rest-model')
+//    }
+//}
