Add artifactory url
Signed-off-by: Silvio Wangler <71073+saw303@users.noreply.github.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
+artifactory_url=https://repo.onstructive.ch/artifactory/libs-release/
+
 libPhoneNumberVersion=8.12.2
 javaPoetVersion=1.13.0
 guavaVersion=28.1-jre
