Make sure we use a fix formatter version

--- a/gradle/java.gradle
+++ b/gradle/java.gradle
@@ -5,7 +5,7 @@ spotless {
   java {
     licenseHeaderFile rootProject.file('LICENSE-SHORT'), "package "
 
-    googleJavaFormat()
+    googleJavaFormat("1.14.0")
 
     removeUnusedImports()
     endWithNewline()
