Produce Micronaut 4 and Micronaut Serdes compatible Java output

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ springVersion=5.2.4.RELEASE
 micronautVersion=1.3.4
 slf4jVersion=1.7.29
 
-# Gradle settings for this project
+# Gradle's settings for this project
 # --------------------------------
 # Enable build cache by default
 org.gradle.caching=true
