--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,18 @@ plugins {
   id "com.github.ben-manes.versions" version "0.47.0" apply false
   id "com.diffplug.gradle.spotless" version "6.20.0" apply false
   id "com.gradle.plugin-publish" version "0.21.0" apply false
-  id("io.micronaut.library") version "${micronautGradlePluginVersion}" apply false
-  id("io.micronaut.aot") version "${micronautGradlePluginVersion}" apply false
+  id("io.micronaut.minimal.library") version "${micronautGradlePluginVersion}" apply false
 }
 
 subprojects { subproject ->
 
-  version = "3.0.11"
+  version = "3.0.13"
 
   apply plugin: 'com.github.ben-manes.versions'
 
-  if (subproject.name != 'gradle-java-rest-api') {
+
+  if (subproject.name != 'gradle-java-rest-api' && subproject.name != 'json-model') {
+
     apply from: "${rootDir}/gradle/micronaut.gradle"
     apply from: "${rootDir}/gradle/publication.gradle"
   }
