--- a/gradle/micronaut.gradle
+++ b/gradle/micronaut.gradle
@@ -3,11 +3,10 @@ apply plugin: 'com.diffplug.spotless'
 apply plugin: 'io.micronaut.minimal.library'
 
 micronaut {
-  runtime("netty")
   testRuntime("spock")
   processing {
     incremental(true)
-    annotations("com.example.*")
+    annotations("ch.silviowangler.rest.*")
   }
 }
 
