--- a/gradle/micronaut.gradle
+++ b/gradle/micronaut.gradle
@@ -12,6 +12,7 @@ micronaut {
 
 dependencies {
   annotationProcessor("io.micronaut.serde:micronaut-serde-processor")
+  testAnnotationProcessor("io.micronaut.serde:micronaut-serde-processor")
   implementation("io.micronaut.serde:micronaut-serde-jackson")
   runtimeOnly("ch.qos.logback:logback-classic")
   testImplementation("io.micronaut:micronaut-http-client")
